--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,24 @@
 <html>
  <body>
   <form action="{{ url_for('lyrics') }}" method="post" class="lyrics">
-    Artist or band name: <input name="artist" type="text" /><br />
+    Poet name:
+    <!-- <input name="artist" type="text" /> -->
+      <select name="artist">
+        {% for n in ['sukumar roy'] %}
+          <option value="{{n}}">{{n}}</option>
+        {% endfor %}
+      </select>
+    <br />
     Number of lines:
     <select name="lines">
-      {% for n in range(1,11) %}
+      {% for n in range(4,11) %}
+        <option value="{{n}}">{{n}}</option>
+      {% endfor %}
+    </select>
+    <br />
+    Model size:
+    <select name="size">
+      {% for n in range(5,11) %}
         <option value="{{n}}">{{n}}</option>
       {% endfor %}
     </select>
