--- a/templates/lyrics.html
+++ b/templates/lyrics.html
@@ -1,13 +1,14 @@
 <html>
  <body>
   <div align="center" style="padding-top:20px;">
+   <h3 style="text-transform: capitalize;">Uttoradhunik {{ artist }}</h3>
+   <br />
    <h2>
    {% for line in result %}
      {{ line }}<br />
    {% endfor %}
    </h2>
-   <h3>{{ artist }}</h3>
-   <br />
+
    <form action="{{ url_for('index') }}">
     <input type="submit" value="Do it again!" />
    </form>
