read poems from local file. if not exists, then go to wiki

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,13 @@
         <option value="{{n}}">{{n}}</option>
       {% endfor %}
     </select>
-    <br />
+    <!-- <br />
     Model size:
     <select name="size">
       {% for n in range(5,11) %}
         <option value="{{n}}">{{n}}</option>
       {% endfor %}
-    </select>
+    </select> -->
     <br /><br />
     <input class="button" type="submit" value="Lyricize">
   </form>
