--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,13 @@
         <option value="{{n}}">{{n}}</option>
       {% endfor %}
     </select>
-    <!-- <br />
-    Model size:
-    <select name="size">
-      {% for n in range(5,11) %}
-        <option value="{{n}}">{{n}}</option>
+    <br />
+    Version:
+    <select name="version">
+      {% for n in range(1,3) %}
+        <option value="{{n}}">v{{n}}</option>
       {% endfor %}
-    </select> -->
+    </select>
     <br /><br />
     <input class="button" type="submit" value="Lyricize">
   </form>
