--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
   </head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Poem Generator</title>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </head>
