disqus support added

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,29 @@
     <a href="https://twitter.com/shibli049" class="twitter-follow-button" data-show-count="false">Follow @shibli049</a>
     <a class="github-button" href="https://github.com/shibli049/lyr_bn/fork" data-icon="octicon-repo-forked" data-count-href="/shibli049/lyr_bn/network" data-count-api="/repos/shibli049/lyr_bn#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork shibli049/lyr_bn on GitHub">Fork</a>
     <a class="github-button" href="https://github.com/shibli049/lyr_bn" data-icon="octicon-star" data-count-href="/shibli049/lyr_bn/stargazers" data-count-api="/repos/shibli049/lyr_bn#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star shibli049/lyr_bn on GitHub">Star</a>
+
+
+
+    <div id="disqus_thread"></div>
+    <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = '//shibli049-pthonanywhere.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
   </body>
 </html>
